Project wizard iterator prepared for existing project