@@ -69,6 +69,7 @@ import org.netbeans.spi.project.ui.support.ProjectChooser;
 import org.openide.DialogDisplayer;
 import org.openide.NotifyDescriptor;
 import org.openide.WizardDescriptor;
+import org.openide.WizardDescriptor.Panel;
 import org.openide.filesystems.FileObject;
 import org.openide.filesystems.FileUtil;
 import org.openide.util.NbBundle;
@@ -77,48 +78,36 @@ public final class ClientSideProjectWizardIterator implements WizardDescriptor.P
 
     private static final Logger LOGGER = Logger.getLogger(ClientSideProjectWizardIterator.class.getName());
 
-    static final String SITE_TEMPLATE = "SITE_TEMPLATE"; // NOI18N
-    static final String LIBRARIES_FOLDER = "LIBRARIES_FOLDER"; // NOI18N
-    static final String SELECTED_LIBRARIES = "SELECTED_LIBRARIES"; // NOI18N
+    private final Wizard wizard;
 
     private int index;
     private WizardDescriptor.Panel<WizardDescriptor>[] panels;
-    private WizardDescriptor wiz;
-
-    private SiteTemplateWizardPanel sitesPanel;
-    private JavaScriptLibrarySelectionPanel librariesPanel;
+    private WizardDescriptor wizardDescriptor;
 
 
-    private ClientSideProjectWizardIterator() {
+    private ClientSideProjectWizardIterator(Wizard wizard) {
+        assert wizard != null;
+        this.wizard = wizard;
     }
 
     @TemplateRegistration(folder="Project/ClientSide",
-            displayName="#ClientSideProjectWizardIterator.displayName",
+            displayName="#ClientSideProjectWizardIterator.newProject.displayName",
             description="../resources/NewClientSideProjectDescription.html",
-            iconBase=ClientSideProject.PROJECT_ICON)
-    @NbBundle.Messages("ClientSideProjectWizardIterator.displayName=HTML Application")
+            iconBase=ClientSideProject.PROJECT_ICON,
+            position=100)
+    @NbBundle.Messages("ClientSideProjectWizardIterator.newProject.displayName=HTML Application")
     public static ClientSideProjectWizardIterator newProject() {
-        return new ClientSideProjectWizardIterator();
+        return new ClientSideProjectWizardIterator(new NewProjectWizard());
     }
 
-    private WizardDescriptor.Panel<WizardDescriptor>[] createPanels() {
-        sitesPanel = new SiteTemplateWizardPanel();
-        librariesPanel = new JavaScriptLibrarySelectionPanel();
-        @SuppressWarnings("unchecked")
-        WizardDescriptor.Panel<WizardDescriptor>[] pnls = new WizardDescriptor.Panel[] {
-                    new ClientSideProjectWizardPanel(),
-                    sitesPanel,
-                    librariesPanel,
-        };
-        return pnls;
-    }
-
-    private String[] createSteps() {
-        return new String[]{
-                    NbBundle.getMessage(ClientSideProjectWizardIterator.class, "LBL_CreateProjectStep"),
-                    NbBundle.getMessage(ClientSideProjectWizardIterator.class, "LBL_ChooseSiteStep"),
-                    NbBundle.getMessage(ClientSideProjectWizardIterator.class, "LBL_JavaScriptLibrarySelectionStep"),
-                };
+    @TemplateRegistration(folder="Project/ClientSide",
+            displayName="#ClientSideProjectWizardIterator.existingProject.displayName",
+            description="../resources/ExistingClientSideProjectDescription.html",
+            iconBase=ClientSideProject.PROJECT_ICON,
+            position=200)
+    @NbBundle.Messages("ClientSideProjectWizardIterator.existingProject.displayName=HTML Application with Existing Sources")
+    public static ClientSideProjectWizardIterator existingProject() {
+        return new ClientSideProjectWizardIterator(null);
     }
 
     @NbBundle.Messages("ClientSideProjectWizardIterator.progress.creatingProject=Creating project")
@@ -127,36 +116,17 @@ public final class ClientSideProjectWizardIterator implements WizardDescriptor.P
         handle.start();
         handle.progress(Bundle.ClientSideProjectWizardIterator_progress_creatingProject());
         Set<FileObject> resultSet = new LinkedHashSet<FileObject>();
-        File dirF = FileUtil.normalizeFile((File) wiz.getProperty("projdir"));
-        String name = (String) wiz.getProperty("name");
-        dirF.mkdirs();
+        File dirF = FileUtil.normalizeFile((File) wizardDescriptor.getProperty(Wizard.PROJECT_DIRECTORY));
+        String name = (String) wizardDescriptor.getProperty(Wizard.NAME);
+        if (!dirF.mkdirs()) {
+            throw new IOException("Cannot create project directory");
+        }
         FileObject dir = FileUtil.toFileObject(dirF);
-        AntProjectHelper helper = ClientSideProjectUtilities.setupProject(dir, name);
+        AntProjectHelper projectHelper = ClientSideProjectUtilities.setupProject(dir, name);
         // Always open top dir as a project:
         resultSet.add(dir);
 
-        // site template
-        SiteTemplateImplementation siteTemplate = (SiteTemplateImplementation) wiz.getProperty(SITE_TEMPLATE);
-        if (siteTemplate != null) {
-            // any site template selected
-            applySiteTemplate(helper, siteTemplate, handle);
-        }
-
-        // get application dir:
-        FileObject siteRootDir = ClientSideProjectUtilities.getSiteRootFolder(helper);
-        if (siteRootDir == null) {
-            ClientSideProjectUtilities.initializeProject(helper);
-            siteRootDir = ClientSideProjectUtilities.getSiteRootFolder(helper);
-            assert siteRootDir != null;
-         }
-
-        // js libs
-        @SuppressWarnings("unchecked")
-        List<JavaScriptLibrarySelection.SelectedLibrary> selectedLibraries = (List<JavaScriptLibrarySelection.SelectedLibrary>) wiz.getProperty(SELECTED_LIBRARIES);
-        if (selectedLibraries != null) {
-            // any libraries selected
-            applyJsLibraries(selectedLibraries, (String) wiz.getProperty(LIBRARIES_FOLDER), siteRootDir, handle);
-        }
+        wizard.instantiate(resultSet, handle, wizardDescriptor, projectHelper);
 
         File parent = dirF.getParentFile();
         if (parent != null && parent.exists()) {
@@ -167,57 +137,6 @@ public final class ClientSideProjectWizardIterator implements WizardDescriptor.P
         return resultSet;
     }
 
-    @NbBundle.Messages({
-        "# {0} - template name",
-        "ClientSideProjectWizardIterator.error.applyingSiteTemplate=Cannot apply template \"{0}\"."
-    })
-    private void applySiteTemplate(AntProjectHelper helper, SiteTemplateImplementation siteTemplate, final ProgressHandle handle) {
-        assert !EventQueue.isDispatchThread();
-        final String templateName = siteTemplate.getName();
-        try {
-            siteTemplate.apply(helper, handle);
-        } catch (IOException ex) {
-            LOGGER.log(Level.INFO, null, ex);
-            errorOccured(Bundle.ClientSideProjectWizardIterator_error_applyingSiteTemplate(templateName));
-        }
-    }
-
-    @NbBundle.Messages({
-        "ClientSideProjectWizardIterator.error.copyingJsLib=Some of the library files could not be retrieved.",
-        "# {0} - library name",
-        "ClientSideProjectWizardIterator.msg.downloadingJsLib=Downloading {0}"
-    })
-    private void applyJsLibraries(List<JavaScriptLibrarySelection.SelectedLibrary> selectedLibraries, String jsLibFolder, FileObject siteRootDir,
-            ProgressHandle handle) throws IOException {
-        assert !EventQueue.isDispatchThread();
-        FileObject librariesRoot = null;
-        boolean someFilesAreMissing = false;
-        for (JavaScriptLibrarySelection.SelectedLibrary selectedLibrary : selectedLibraries) {
-            if (selectedLibrary.isFromTemplate()) {
-                // ignore files from site template (they are already applied)
-                continue;
-            }
-            if (librariesRoot == null) {
-                librariesRoot = FileUtil.createFolder(siteRootDir, jsLibFolder);
-            }
-            LibraryVersion libraryVersion = selectedLibrary.getLibraryVersion();
-            Library library = libraryVersion.getLibrary();
-            handle.progress(Bundle.ClientSideProjectWizardIterator_msg_downloadingJsLib(library.getProperties().get(JavaScriptLibraryTypeProvider.PROPERTY_REAL_DISPLAY_NAME)));
-            try {
-                WebClientLibraryManager.addLibraries(new Library[]{library}, librariesRoot, libraryVersion.getType());
-            } catch (MissingLibResourceException e) {
-                someFilesAreMissing = true;
-            }
-        }
-        if (someFilesAreMissing) {
-            errorOccured(Bundle.ClientSideProjectWizardIterator_error_copyingJsLib());
-        }
-    }
-
-    private void errorOccured(String message) {
-        DialogDisplayer.getDefault().notifyLater(new NotifyDescriptor.Message(message, NotifyDescriptor.ERROR_MESSAGE));
-    }
-
     @Override
     public Set<FileObject> instantiate() throws IOException {
         throw new UnsupportedOperationException("never implemented - use progress one");
@@ -225,11 +144,11 @@ public final class ClientSideProjectWizardIterator implements WizardDescriptor.P
 
     @Override
     public void initialize(WizardDescriptor wiz) {
-        this.wiz = wiz;
+        this.wizardDescriptor = wiz;
         index = 0;
-        panels = createPanels();
+        panels = wizard.createPanels();
         // Make sure list of steps is accurate.
-        String[] steps = createSteps();
+        String[] steps = wizard.createSteps();
         for (int i = 0; i < panels.length; i++) {
             Component c = panels[i].getComponent();
             if (steps[i] == null) {
@@ -250,16 +169,20 @@ public final class ClientSideProjectWizardIterator implements WizardDescriptor.P
 
     @Override
     public void uninitialize(WizardDescriptor wiz) {
-        this.wiz.putProperty("projdir", null);
-        this.wiz.putProperty("name", null);
-        this.wiz = null;
+        wizardDescriptor.putProperty(Wizard.PROJECT_DIRECTORY, null);
+        wizardDescriptor.putProperty(Wizard.NAME, null);
+        wizard.uninitialize(wizardDescriptor);
         panels = null;
     }
 
+    @NbBundle.Messages({
+        "# {0} - current step index",
+        "# {1} - number of steps",
+        "ClientSideProjectWizardIterator.name={0} of {1}"
+    })
     @Override
     public String name() {
-        return MessageFormat.format("{0} of {1}",
-                new Object[]{new Integer(index + 1), new Integer(panels.length)});
+        return Bundle.ClientSideProjectWizardIterator_name(Integer.valueOf(index + 1), Integer.valueOf(panels.length));
     }
 
     @Override
@@ -295,11 +218,145 @@ public final class ClientSideProjectWizardIterator implements WizardDescriptor.P
 
     // If nothing unusual changes in the middle of the wizard, simply:
     @Override
-    public final void addChangeListener(ChangeListener l) {
+    public void addChangeListener(ChangeListener l) {
+        // noop
     }
 
     @Override
-    public final void removeChangeListener(ChangeListener l) {
+    public void removeChangeListener(ChangeListener l) {
+        // noop
+    }
+
+    //~ Inner classes
+
+    public interface Wizard {
+        String PROJECT_DIRECTORY = "PROJECT_DIRECTORY"; // NOI18N
+        String NAME = "NAME"; // NOI18N
+
+        WizardDescriptor.Panel<WizardDescriptor>[] createPanels();
+        String[] createSteps();
+        void instantiate(Set<FileObject> files, ProgressHandle handle, WizardDescriptor wizardDescriptor, AntProjectHelper projectHelper) throws IOException;
+        void uninitialize(WizardDescriptor wizardDescriptor);
+    }
+
+    public static final class NewProjectWizard implements Wizard {
+
+        public static final String SITE_TEMPLATE = "SITE_TEMPLATE"; // NOI18N
+        public static final String LIBRARIES_FOLDER = "LIBRARIES_FOLDER"; // NOI18N
+        public static final String SELECTED_LIBRARIES = "SELECTED_LIBRARIES"; // NOI18N
+
+
+        @Override
+        public Panel<WizardDescriptor>[] createPanels() {
+            @SuppressWarnings("unchecked")
+            WizardDescriptor.Panel<WizardDescriptor>[] pnls = new WizardDescriptor.Panel[] {
+                        new ClientSideProjectWizardPanel(),
+                        new SiteTemplateWizardPanel(),
+                        new JavaScriptLibrarySelectionPanel(),
+            };
+            return pnls;
+        }
+
+        @NbBundle.Messages({
+            "NewProjectWizard.step.createProject=Name and Location",
+            "NewProjectWizard.step.chooseSite=Site Template",
+            "NewProjectWizard.step.selectJsLibrary=JavaScript Libraries"
+        })
+        @Override
+        public String[] createSteps() {
+            return new String[] {
+                Bundle.NewProjectWizard_step_createProject(),
+                Bundle.NewProjectWizard_step_chooseSite(),
+                Bundle.NewProjectWizard_step_selectJsLibrary(),
+            };
+        }
+
+        @Override
+        public void instantiate(Set<FileObject> files, ProgressHandle handle, WizardDescriptor wizardDescriptor, AntProjectHelper projectHelper) throws IOException {
+            // site template
+            SiteTemplateImplementation siteTemplate = (SiteTemplateImplementation) wizardDescriptor.getProperty(SITE_TEMPLATE);
+            if (siteTemplate != null) {
+                // any site template selected
+                applySiteTemplate(projectHelper, siteTemplate, handle);
+            }
+
+            // get application dir:
+            FileObject siteRootDir = ClientSideProjectUtilities.getSiteRootFolder(projectHelper);
+            if (siteRootDir == null) {
+                ClientSideProjectUtilities.initializeProject(projectHelper);
+                siteRootDir = ClientSideProjectUtilities.getSiteRootFolder(projectHelper);
+                assert siteRootDir != null;
+             }
+
+            // js libs
+            @SuppressWarnings("unchecked")
+            List<JavaScriptLibrarySelection.SelectedLibrary> selectedLibraries = (List<JavaScriptLibrarySelection.SelectedLibrary>) wizardDescriptor.getProperty(SELECTED_LIBRARIES);
+            if (selectedLibraries != null) {
+                // any libraries selected
+                applyJsLibraries(selectedLibraries, (String) wizardDescriptor.getProperty(LIBRARIES_FOLDER), siteRootDir, handle);
+            }
+        }
+
+        @Override
+        public void uninitialize(WizardDescriptor wizardDescriptor) {
+            wizardDescriptor.putProperty(SITE_TEMPLATE, null);
+            wizardDescriptor.putProperty(LIBRARIES_FOLDER, null);
+            wizardDescriptor.putProperty(SELECTED_LIBRARIES, null);
+        }
+
+        @NbBundle.Messages({
+            "# {0} - template name",
+            "ClientSideProjectWizardIterator.error.applyingSiteTemplate=Cannot apply template \"{0}\"."
+        })
+        private void applySiteTemplate(AntProjectHelper helper, SiteTemplateImplementation siteTemplate, final ProgressHandle handle) {
+            assert !EventQueue.isDispatchThread();
+            final String templateName = siteTemplate.getName();
+            try {
+                siteTemplate.apply(helper, handle);
+            } catch (IOException ex) {
+                LOGGER.log(Level.INFO, null, ex);
+                errorOccured(Bundle.ClientSideProjectWizardIterator_error_applyingSiteTemplate(templateName));
+            }
+        }
+
+        @NbBundle.Messages({
+            "ClientSideProjectWizardIterator.error.copyingJsLib=Some of the library files could not be retrieved.",
+            "# {0} - library name",
+            "ClientSideProjectWizardIterator.msg.downloadingJsLib=Downloading {0}"
+        })
+        private void applyJsLibraries(List<JavaScriptLibrarySelection.SelectedLibrary> selectedLibraries, String jsLibFolder, FileObject siteRootDir,
+                ProgressHandle handle) throws IOException {
+            assert !EventQueue.isDispatchThread();
+            FileObject librariesRoot = null;
+            boolean someFilesAreMissing = false;
+            for (JavaScriptLibrarySelection.SelectedLibrary selectedLibrary : selectedLibraries) {
+                if (selectedLibrary.isFromTemplate()) {
+                    // ignore files from site template (they are already applied)
+                    continue;
+                }
+                if (librariesRoot == null) {
+                    librariesRoot = FileUtil.createFolder(siteRootDir, jsLibFolder);
+                }
+                LibraryVersion libraryVersion = selectedLibrary.getLibraryVersion();
+                Library library = libraryVersion.getLibrary();
+                handle.progress(Bundle.ClientSideProjectWizardIterator_msg_downloadingJsLib(library.getProperties().get(JavaScriptLibraryTypeProvider.PROPERTY_REAL_DISPLAY_NAME)));
+                try {
+                    WebClientLibraryManager.addLibraries(new Library[]{library}, librariesRoot, libraryVersion.getType());
+                } catch (MissingLibResourceException e) {
+                    someFilesAreMissing = true;
+                }
+            }
+            if (someFilesAreMissing) {
+                errorOccured(Bundle.ClientSideProjectWizardIterator_error_copyingJsLib());
+            }
+        }
+
+        private void errorOccured(String message) {
+            DialogDisplayer.getDefault().notifyLater(new NotifyDescriptor.Message(message, NotifyDescriptor.ERROR_MESSAGE));
+        }
+
+
+
     }
 
 }
